# AgenticDemo

./: .gitignore  App.tsx  PROJECT.md  README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.cursor/plans/: 自监管智能办公助手开发计划_b3c8b5f8.plan.md
.cursor/rules/: AI-Integration.mdc  Base.mdc  Delete-Confirmation.mdc  Git-Commit.mdc  React-TypeScript.mdc  UI-Design-System.mdc
components/: AgentChat.tsx  CodeWorkspace.tsx  ProjectExplorer.tsx  SemanticChunker.tsx  Sidebar.tsx  ThinkingProcess.tsx  VectorDatabase.tsx  VisualChart.tsx
components/charts/: BarChart.tsx  LineChart.tsx  PieChartView.tsx
components/chat/: ChatHeader.tsx  ChatInput.tsx  MarkdownWithCharts.tsx  MessageBubble.tsx  PlanLoadingSkeleton.tsx  PlanView.tsx  QuickCommandGrid.tsx  QuickCommandRow.tsx  index.ts
components/chunker/: ChunkCard.tsx  (+1 more)
hooks/: useAgentSession.ts
mcp/: README.md
mcp/mcp-file-ops/: mcp_file_ops.py  pyproject.toml
mcp/mcp-notes/: mcp_notes.py  pyproject.toml
mcp/mcp-utils/: mcp_utils.py  pyproject.toml
mcp/youdu_mcp/: README.md  __init__.py  client.py  crypto.py  pyproject.toml  run.py  server.py  youdu_3e8d559d
server/: README.md  app.ts  config.ts  go.mod  go.sum  index.ts  routes.ts  tsconfig.json
services/: agentContext.ts  agentStateService.ts  api.ts  builtinTools.ts  geminiService.ts  mcpService.ts  prompts.ts  registry.ts  todoService.ts  toolEnableService.ts  vectorStoreService.ts
theme/: README.md  tech-control.css  tokens.ts
utils/: classnames.ts  fetchSSE.ts  toast.ts
(+79 files in other folders)
