[project]
name = "mcp-file-ops"
version = "0.1.0"
description = "文件操作 MCP：读、写、列出目录（项目内安全范围）"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_file_ops.py"]
