[project]
name = "mcp-notes"
version = "0.1.0"
description = "简易笔记 MCP：内存存储，支持添加、列出、检索、删除"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_notes.py"]
