[project]
name = "mcp-utils"
version = "0.1.0"
description = "实用工具 MCP：计算、日期、随机数、UUID、文本处理"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_utils.py"]
