[project]
name = "youdu-mcp"
version = "0.1.0"
description = "有度即时通 MCP：应用消息、组织架构、群组、会话等 API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
    "cryptography",
    "httpx",
    "python-dotenv",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youdu_mcp"]
